--- a/微场景/index.html
+++ b/微场景/index.html
@@ -21,12 +21,12 @@
                     <img src="img/4.png" alt="">
                     <img src="img/6.png" alt="">
                 </div>
-                <div class="main" style="display: none">
+                <div class="main">
                     <img src="img/7.png" alt="">
                     <img src="img/8.png" alt="">
                     <p class="text">梦想起航 . 再创辉煌</p>
                 </div>
-                <div class="footer" style="display: none">
+                <div class="footer">
                     <h2>%企业名称%</h2>
                     <p>2018年1月18日 晚8:00-11:00</p>
                     <img src="img/10.png" alt="">
@@ -34,7 +34,18 @@
                 </div>
             </div>
         </div>
-        <div class="swiper-slide"></div>
+        <div class="swiper-slide">
+            <div class="s2">
+                <h2>领导致辞</h2>
+                <div>
+                    <img src="" alt="">
+                    <p>情爱的同志们</p>
+                    <p>我们成立于2009年</p>
+                    <p>我们秉着</p>
+                    <span>默默企业</span>
+                </div>
+            </div>
+        </div>
         <div class="swiper-slide"></div>
         <div class="swiper-slide"></div>
         <div class="swiper-slide"></div>
