--- a/微场景/index.html
+++ b/微场景/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.5/css/swiper.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animate.min.css">
 </head>
 <body>
 <!-- Swiper -->
@@ -15,20 +16,20 @@
         <div class="swiper-slide">
             <div class="s1">
                 <div class="header">
-                    <img src="img/1.png" alt="">
-                    <img src="img/2.png" alt="">
-                    <img src="img/3.png" alt="">
-                    <img src="img/4.png" alt="">
-                    <img src="img/6.png" alt="">
+                    <img src="img/1.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="0.8s" swiper-animate-delay="0.7s">
+                    <img src="img/2.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="1s" swiper-animate-delay="1s">
+                    <img src="img/3.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="1.7s" swiper-animate-delay="1.3s">
+                    <img src="img/4.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="1.5s" swiper-animate-delay="0.8s">
+                    <img src="img/6.png" alt="" class="ani" swiper-animate-effect="pulse" swiper-animate-duration="2s" swiper-animate-delay="1.5s">
                 </div>
                 <div class="main">
-                    <img src="img/7.png" alt="">
-                    <img src="img/8.png" alt="">
-                    <p class="text">梦想起航 . 再创辉煌</p>
+                    <img src="img/7.png" alt=""class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+                    <img src="img/8.png" alt=""class="ani" swiper-animate-effect="flip" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+                    <p class="text ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">梦想起航 . 再创辉煌</p>
                 </div>
                 <div class="footer">
-                    <h2>%企业名称%</h2>
-                    <p>2018年1月18日 晚8:00-11:00</p>
+                    <h2 class="ani" swiper-animate-effect="rotateInUpRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">%企业名称%</h2>
+                    <p class="ani" swiper-animate-effect="rotateInUpLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">2018年1月18日 晚8:00-11:00</p>
                     <img src="img/10.png" alt="">
                     <img src="img/11.png" alt="">
                 </div>
@@ -60,5 +61,6 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.5/js/swiper.js"></script>
 <script src="js/script.js"></script>
+<script src="js/swiper.animate1.0.2.min.js"></script>
 </body>
 </html>
