--- a/微场景/index.html
+++ b/微场景/index.html
@@ -30,19 +30,23 @@
                 <div class="footer">
                     <h2 class="ani" swiper-animate-effect="rotateInUpRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">%企业名称%</h2>
                     <p class="ani" swiper-animate-effect="rotateInUpLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">2018年1月18日 晚8:00-11:00</p>
-                    <img src="img/10.png" alt="">
-                    <img src="img/11.png" alt="">
+                    <img src="img/10.png" alt=""class="ani" swiper-animate-effect="shake" swiper-animate-duration="2.2s" swiper-animate-delay="1s">
+                    <img src="img/11.png" alt=""class="ani" swiper-animate-effect="shake" swiper-animate-duration="2.5s" swiper-animate-delay="1.3s">
                 </div>
             </div> 
         </div>
         <div class="swiper-slide">
             <div class="s2">
-                <h2>领导致辞</h2>
-                <div class="s2bg">
-                    <p class="dw1">亲爱的同志们,大家晚上好</p>
+                <h2 class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">领导致辞</h2>
+                <div class="s2bg ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+                    <p class="dw1" >亲爱的同志们,大家晚上好</p>
                     <p class="dw2">我们成立于2009年。现在有员工1300多人，我们专注与移动互联网与信息互动社区领域，坚持“技术领先，理念领先”的发展战略，2015完成公司整体改进变为股份有限公司，倾力打造具有知识产权的高端移动分发平台致力于帮助移动互联网用户过移动设备开放，便捷的互联网服务。</p>
                     <p class="dw3">我们秉着真诚，团结，主动，责任”的企业文化，立志成为移动互联网，打造研发和运营一体的产业链，成为移动互联网行业值得用心尊敬和新来的公司</p>
                     <span>某某企业</span>
+                </div>
+                <div class="footer">
+                    <img src="img/10.png" alt=""class="ani" swiper-animate-effect="shake" swiper-animate-duration="2.2s" swiper-animate-delay="1s">
+                    <img src="img/11.png" alt=""class="ani" swiper-animate-effect="shake" swiper-animate-duration="2.5s" swiper-animate-delay="1.3s">
                 </div>
             </div>
         </div>
