--- a/微场景/index.html
+++ b/微场景/index.html
@@ -61,6 +61,14 @@
 
     <!-- Add Pagination -->
     <div class="swiper-pagination"></div>
+
+    <!-- 音乐 -->
+        <audio id="mp3" src="mp3/1.mp3" autoplay loop></audio>
+        <div id="mp3btn" onclick="playPause()">
+             <img src="img/musicIcon.png" alt="">                
+        </div>  
+    
+
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.5/js/swiper.js"></script>
 <script src="js/swiper.animate1.0.2.min.js"></script>
