--- a/微场景/index.html
+++ b/微场景/index.html
@@ -38,6 +38,7 @@
         <div class="swiper-slide">
             <div class="s2">
                 <h2 class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">领导致辞</h2>
+                <h5>LEADFR SPEECH</h5>
                 <div class="s2bg ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
                     <p class="dw1" >亲爱的同志们,大家晚上好</p>
                     <p class="dw2">我们成立于2009年。现在有员工1300多人，我们专注与移动互联网与信息互动社区领域，坚持“技术领先，理念领先”的发展战略，2015完成公司整体改进变为股份有限公司，倾力打造具有知识产权的高端移动分发平台致力于帮助移动互联网用户过移动设备开放，便捷的互联网服务。</p>
@@ -50,7 +51,25 @@
                 </div>
             </div>
         </div>
-        <div class="swiper-slide"></div>
+        <div class="swiper-slide">
+            <div class="s3">
+                <h2>企业宗旨</h2>
+                <h5>COMPANY TENET</h5>
+                <div class="container">
+                    <p class="tu1">真诚</p>
+                    <p class="tu2">团结</p>
+                    <p class="tu3">开放</p>
+                    <p class="tu4">主动</p>
+                    <p class="tu5">责任</p>
+                    <p class="tu6">诚信</p>
+                    <p class="tu7"创兴进取></p>    
+                    <ul>
+                        <li>秉着“真诚 团结 主动 责任 创新”</li>
+                        <li的企业文化，立志于移动互联网络></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
         <div class="swiper-slide"></div>
         <div class="swiper-slide"></div>
         <div class="swiper-slide"></div>
@@ -67,8 +86,6 @@
         <div id="mp3btn" onclick="playPause()">
              <img src="img/musicIcon.png" alt="">                
         </div>  
-    
-
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.5/js/swiper.js"></script>
 <script src="js/swiper.animate1.0.2.min.js"></script>
