--- a/微场景/index.html
+++ b/微场景/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>年会邀请函</title>
@@ -9,86 +9,127 @@
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<!-- Swiper -->
-<div class="swiper-container">
-    <div class="swiper-wrapper">
-        <div class="swiper-slide">
-            <div class="s1">
-                <div class="header">
-                    <img src="img/1.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="0.8s" swiper-animate-delay="0.7s">
-                    <img src="img/2.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="1s" swiper-animate-delay="1s">
-                    <img src="img/3.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="1.7s" swiper-animate-delay="1.3s">
-                    <img src="img/4.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="1.5s" swiper-animate-delay="0.8s">
-                    <img src="img/6.png" alt="" class="ani" swiper-animate-effect="pulse" swiper-animate-duration="2s" swiper-animate-delay="1.5s">
-                </div>
-                <div class="main">
-                    <img src="img/7.png" alt=""class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
-                    <img src="img/8.png" alt=""class="ani" swiper-animate-effect="flip" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
-                    <p class="text ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">梦想起航 . 再创辉煌</p>
-                </div>
-                <div class="footer">
-                    <h2 class="ani" swiper-animate-effect="rotateInUpRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">%企业名称%</h2>
-                    <p class="ani" swiper-animate-effect="rotateInUpLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">2018年1月18日 晚8:00-11:00</p>
-                    <img src="img/10.png" alt=""class="ani" swiper-animate-effect="shake" swiper-animate-duration="2.2s" swiper-animate-delay="1s">
-                    <img src="img/11.png" alt=""class="ani" swiper-animate-effect="shake" swiper-animate-duration="2.5s" swiper-animate-delay="1.3s">
-                </div>
-            </div> 
-        </div>
-        <div class="swiper-slide">
-            <div class="s2">
-                <h2 class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">领导致辞</h2>
-                <h5>LEADFR SPEECH</h5>
-                <div class="s2bg ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
-                    <p class="dw1" >亲爱的同志们,大家晚上好</p>
-                    <p class="dw2">我们成立于2009年。现在有员工1300多人，我们专注与移动互联网与信息互动社区领域，坚持“技术领先，理念领先”的发展战略，2015完成公司整体改进变为股份有限公司，倾力打造具有知识产权的高端移动分发平台致力于帮助移动互联网用户过移动设备开放，便捷的互联网服务。</p>
-                    <p class="dw3">我们秉着真诚，团结，主动，责任”的企业文化，立志成为移动互联网，打造研发和运营一体的产业链，成为移动互联网行业值得用心尊敬和新来的公司</p>
-                    <span>某某企业</span>
-                </div>
-                <div class="footer">
-                    <img src="img/10.png" alt=""class="ani" swiper-animate-effect="shake" swiper-animate-duration="2.2s" swiper-animate-delay="1s">
-                    <img src="img/11.png" alt=""class="ani" swiper-animate-effect="shake" swiper-animate-duration="2.5s" swiper-animate-delay="1.3s">
+    <!-- Swiper -->
+    <div class="swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <div class="s1">
+                    <div class="header">
+                        <img src="img/1.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="0.8s" swiper-animate-delay="0.7s">
+                        <img src="img/2.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="1s" swiper-animate-delay="1s">
+                        <img src="img/3.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="1.7s" swiper-animate-delay="1.3s">
+                        <img src="img/4.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="1.5s" swiper-animate-delay="0.8s">
+                        <img src="img/6.png" alt="" class="ani" swiper-animate-effect="pulse" swiper-animate-duration="2s" swiper-animate-delay="1.5s">
+                    </div>
+                    <div class="main">
+                        <img src="img/7.png" alt="" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+                        <img src="img/8.png" alt="" class="ani" swiper-animate-effect="flip" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+                        <p class="text ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">梦想起航 . 再创辉煌</p>
+                    </div>
+                    <div class="footer">
+                        <h2 class="ani" swiper-animate-effect="rotateInUpRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">%企业名称%</h2>
+                        <p class="ani" swiper-animate-effect="rotateInUpLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">2018年1月18日 晚8:00-11:00</p>
+                        <img src="img/10.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="2.2s" swiper-animate-delay="1s">
+                        <img src="img/11.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="2.5s" swiper-animate-delay="1.3s">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="s3">
-                <h2>企业宗旨</h2>
-                <h5>COMPANY TENET</h5>
-                <div class="container">
-                    <p class="tu1">真诚</p>
-                    <p class="tu2">团结</p>
-                    <p class="tu3">开放</p>
-                    <p class="tu4">主动</p>
-                    <p class="tu5">责任</p>
-                    <p class="tu6">诚信</p>
-                    <p class="tu7"创兴进取></p>    
-                    <ul>
-                        <li>秉着“真诚 团结 主动 责任 创新”</li>
-                        <li的企业文化，立志于移动互联网络></li>
-                    </ul>
+            <div class="swiper-slide">
+                <div class="s2">
+                    <h2 class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">领导致辞</h2>
+                    <h5>LEADFR SPEECH</h5>
+                    <div class="s2bg ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+                        <p class="dw1">亲爱的同志们,大家晚上好</p>
+                        <p class="dw2">我们成立于2009年。现在有员工1300多人，我们专注与移动互联网与信息互动社区领域，坚持“技术领先，理念领先”的发展战略，2015完成公司整体改进变为股份有限公司，倾力打造具有知识产权的高端移动分发平台致力于帮助移动互联网用户过移动设备开放，便捷的互联网服务。</p>
+                        <p class="dw3">我们秉着真诚，团结，主动，责任”的企业文化，立志成为移动互联网，打造研发和运营一体的产业链，成为移动互联网行业值得用心尊敬和新来的公司</p>
+                        <span>某某企业</span>
+                    </div>
+                    <div class="footer">
+                        <img src="img/10.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="2.2s" swiper-animate-delay="1s">
+                        <img src="img/11.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="2.5s" swiper-animate-delay="1.3s">
+                    </div>
                 </div>
             </div>
+            <div class="swiper-slide">
+                <div class="s3">
+                    <h2>企业宗旨</h2>
+                    <h5>COMPANY TENET</h5>
+                    <div class="container">
+                        <span>
+                            <p class="tu1">真诚</p>
+
+                            <span>
+                                <p class="tu2">团结</p>
+                            </span>
+                            <span>
+                                <p class="tu3">开放</p>
+                            </span>
+                            <span>
+                                <p class="tu4">主动</p>
+                            </span>
+                            <span>
+                                <p class="tu5">责任</p>
+                            </span>
+                            <span>
+                                <p class="tu6">诚信</p>
+                            </span>
+                            <span>
+                                <p class="tu7">创兴进取</p>
+                            </span>
+                            <ul>
+                                <li>秉着“真诚 团结 主动 责任 创新”</li>
+                                <li>的企业文化，立志于移动互联网络</li>
+                            </ul>
+                    </div>
+                    <div class="footer">
+                        <img src="img/10.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="2.2s" swiper-animate-delay="1s">
+                        <img src="img/11.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="2.5s" swiper-animate-delay="1.3s">
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="s4">
+                    <div class="header">
+                        <h2>发展数据</h2>
+                        <h5>DEVEL OPMENT</h5>
+                    </div>
+                    <div class="container">
+                        <div class="nian1">
+                            <span></span>
+                            <p>2017</p>
+                        </div>
+                        <div class="nian2">
+                            <span></span>
+                            <p>2016</p>
+                        </div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <div class="footer"></div>
+                </div>
+            </div>
+            <div class="swiper-slide"></div>
+            <div class="swiper-slide"></div>
+            <div class="swiper-slide"></div>
         </div>
-        <div class="swiper-slide"></div>
-        <div class="swiper-slide"></div>
-        <div class="swiper-slide"></div>
-        <div class="swiper-slide"></div>
-    </div>
 
-    <div class="swiper-button-next"></div>
+        <div class="swiper-button-next"></div>
 
-    <!-- Add Pagination -->
-    <div class="swiper-pagination"></div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
 
-    <!-- 音乐 -->
+        <!-- 音乐 -->
         <audio id="mp3" src="mp3/1.mp3" autoplay loop></audio>
         <div id="mp3btn" onclick="playPause()">
-             <img src="img/musicIcon.png" alt="">                
-        </div>  
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.5/js/swiper.js"></script>
-<script src="js/swiper.animate1.0.2.min.js"></script>
-<script src="js/script.js"></script>
+            <img src="img/musicIcon.png" alt="">
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.5/js/swiper.js"></script>
+    <script src="js/swiper.animate1.0.2.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
+
 </html>
