--- a/微场景/index.html
+++ b/微场景/index.html
@@ -111,15 +111,15 @@
                                 <li class="e1">
                                     <img src="img/jiantou.png" alt="">
                                     <p>销售额增长</p>
-                                    <span>100%</span>
+                                    <span class="bai">100%</span>
                                 </li>
                                 <li class="e2">
                                     <img src="img/lan0.png" alt="">
-                                    <span>1.2亿</span>
+                                    <span class="lan">1.2亿</span>
                                 </li>
                                 <li class="e3">
                                     <img src="img/lan.png" alt="">
-                                    <span>6000万</span>
+                                    <span class="lan">6000万</span>
                                 </li>
                             </ul>
                         </div>
@@ -128,15 +128,15 @@
                                 <li class="e4">
                                     <img src="img/jiantou.png" alt="">
                                     <p>盈利额额增长</p>
-                                    <span>100%</span>
+                                    <span class="bai">80%</span>
                                 </li>
                                 <li class="e5">
                                     <img src="img/lan0.png" alt="">
-                                    <span>8000万</span>
+                                    <span class="lan">8000万</span>
                                 </li>
                                 <li class="e6">
                                     <img src="img/lan.png" alt="">
-                                    <span>4800万</span>
+                                    <span class="lan">4800万</span>
                                 </li>
                             </ul>
                         </div>
@@ -145,15 +145,15 @@
                                 <li class="e7">
                                     <img src="img/jiantou.png" alt="">
                                     <p>用户增长</p>
-                                    <span>100%</span>
+                                    <span class="bai">100%</span>
                                 </li>
                                 <li class="e8">
                                     <img src="img/lan0.png" alt="">
-                                    <span>100万</span>
+                                    <span class="lan">100万</span>
                                 </li>
                                 <li class="e9">
                                     <img src="img/lan.png" alt="">
-                                    <span>50万</span>
+                                    <span class="lan">50万</span>
                                 </li>
                             </ul>
                         </div>
