--- a/微场景/index.html
+++ b/微场景/index.html
@@ -58,30 +58,30 @@
                     <h5>COMPANY TENET</h5>
                     <div class="container">
                         <span>
-                            <p class="tu1">真诚</p>
-
-                            <span>
-                                <p class="tu2">团结</p>
-                            </span>
-                            <span>
-                                <p class="tu3">开放</p>
-                            </span>
-                            <span>
-                                <p class="tu4">主动</p>
-                            </span>
-                            <span>
-                                <p class="tu5">责任</p>
-                            </span>
-                            <span>
-                                <p class="tu6">诚信</p>
-                            </span>
-                            <span>
-                                <p class="tu7">创兴进取</p>
-                            </span>
-                            <ul>
-                                <li>秉着“真诚 团结 主动 责任 创新”</li>
-                                <li>的企业文化，立志于移动互联网络</li>
-                            </ul>
+                            <p class="tu1 ani" swiper-animate-effect="wobble" swiper-animate-duration="1s" swiper-animate-delay="1.3s">真诚</p>
+                        </span>
+                        <span>
+                            <p class="tu2 ani" swiper-animate-effect="wobble" swiper-animate-duration="1.2s" swiper-animate-delay="1s">团结</p>
+                        </span>
+                        <span>
+                            <p class="tu3 ani" swiper-animate-effect="wobble" swiper-animate-duration="1s.6" swiper-animate-delay="1.5s">开放</p>
+                        </span>
+                        <span>
+                            <p class="tu4 ani" swiper-animate-effect="wobble" swiper-animate-duration="1.9s" swiper-animate-delay="1.8s">主动</p>
+                        </span>
+                        <span>
+                            <p class="tu5 ani" swiper-animate-effect="wobble" swiper-animate-duration="2.1s" swiper-animate-delay="1.5s">责任</p>
+                        </span>
+                        <span>
+                            <p class="tu6 ani" swiper-animate-effect="wobble" swiper-animate-duration="1.6s" swiper-animate-delay="2.1s">诚信</p>
+                        </span>
+                        <span>
+                            <p class="tu7 ani" swiper-animate-effect="pulse" sw iper-animate-duration="2.4s" swiper-animate-delay="1.9s">创兴进取</p>
+                        </span>
+                        <ul>
+                            <li class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.6s">秉着“真诚 团结 主动 责任 创新”</li>
+                            <li class="ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="0.9s">的企业文化，立志于移动互联网络</li>
+                        </ul>
                     </div>
                     <div class="footer">
                         <img src="img/10.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="2.2s" swiper-animate-delay="1s">
@@ -108,16 +108,16 @@
                         </div>
                         <div>
                             <ul>
-                                <li class="e1">
+                                <li class="e1 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.7s" swiper-animate-delay="0.7s">
                                     <img src="img/jiantou.png" alt="">
                                     <p>销售额增长</p>
                                     <span class="bai">100%</span>
                                 </li>
-                                <li class="e2">
+                                <li class="e2 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.9s" swiper-animate-delay="0.9s">
                                     <img src="img/lan0.png" alt="">
                                     <span class="lan">1.2亿</span>
                                 </li>
-                                <li class="e3">
+                                <li class="e3 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.1s" swiper-animate-delay="1.1s">
                                     <img src="img/lan.png" alt="">
                                     <span class="lan">6000万</span>
                                 </li>
@@ -125,16 +125,16 @@
                         </div>
                         <div>
                             <ul>
-                                <li class="e4">
+                                <li class="e4 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.3s" swiper-animate-delay="1.3s">
                                     <img src="img/jiantou.png" alt="">
                                     <p>盈利额额增长</p>
                                     <span class="bai">80%</span>
                                 </li>
-                                <li class="e5">
+                                <li class="e5 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.5s" swiper-animate-delay="1.5s">
                                     <img src="img/lan0.png" alt="">
                                     <span class="lan">8000万</span>
                                 </li>
-                                <li class="e6">
+                                <li class="e6 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.7s" swiper-animate-delay="1.7s">
                                     <img src="img/lan.png" alt="">
                                     <span class="lan">4800万</span>
                                 </li>
@@ -142,24 +142,24 @@
                         </div>
                         <div>
                             <ul>
-                                <li class="e7">
+                                <li class="e7 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="2.1s" swiper-animate-delay="2.1s">
                                     <img src="img/jiantou.png" alt="">
                                     <p>用户增长</p>
                                     <span class="bai">100%</span>
                                 </li>
-                                <li class="e8">
+                                <li class="e8 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="2.3s" swiper-animate-delay="2.3s">
                                     <img src="img/lan0.png" alt="">
                                     <span class="lan">100万</span>
                                 </li>
-                                <li class="e9">
+                                <li class="e9 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="2.5s" swiper-animate-delay="2.5s">
                                     <img src="img/lan.png" alt="">
                                     <span class="lan">50万</span>
                                 </li>
                             </ul>
                         </div>
                         <ul class="qq">
-                            <li>2017年无论是销售额还是用户数量都有显著</li>
-                            <li>增长，2018年再接再厉， 再创辉煌</li>
+                            <li class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="2.7s" swiper-animate-delay="2.7s">2017年无论是销售额还是用户数量都有显著</li>
+                            <li class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="2.9s" swiper-animate-delay="2.9s">增长，2018年再接再厉， 再创辉煌</li>
                         </ul>
                     </div>
                     <div class="footer">
@@ -176,24 +176,24 @@
                     </div>
                     <div class="container">
                         <div class="to1 clearfix">
-                            <div class="tou1">
+                            <div class="tou1 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
                                 <img src="img/touxang1.png" alt="">
                                 <p>行政部 - 陈某某</p>
                                 <span>行政之星</span>
                             </div>
-                            <div class="tou2">
+                            <div class="tou2 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.8s" swiper-animate-delay="0.8s">
                                 <img src="img/touxang2.png" alt="">
                                 <p>运营部 - 柴某某</p>
                                 <span>运营之星</span>
                             </div>
                         </div>
                         <div class="to2 clearfix">
-                            <div class="tou3">
+                            <div class="tou3 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.2s" swiper-animate-delay="1.2s">
                                 <img src="img/touxang3.png" alt="">
                                 <p>销售部 - 李某某</p>
                                 <span>销售之星</span>
                             </div>
-                            <div class="tou4">
+                            <div class="tou4 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.5s" swiper-animate-delay="1.5s">
                                 <img src="img/touxang4.png" alt="">
                                 <p>产品部 - 王某某</p>
                                 <span>产品之星</span>
@@ -223,7 +223,7 @@
                             <img src="img/dian.png" alt="">
                         </div>
                         <div class="zhong">
-                            <div class="zhong1">
+                            <div class="zhong1 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.7s" swiper-animate-delay="0.7s">
                                 <span class="tu">8:00 PM - 9:00 PM</span>
                                 <ul class="ul1">
                                     <li class="a2">
@@ -242,7 +242,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="zhong2">
+                            <div class="zhong2 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="1s">
                                 <span class="tu">9:00 PM - 10:00 PM</span>
                                 <ul class="ul1">
                                     <li class="a2">
@@ -261,7 +261,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="zhong3">
+                            <div class="zhong3 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.3s" swiper-animate-delay="1.3s">
                                 <span class="tu">10:00 PM - 11:00 PM</span>
                                 <ul class="ul1">
                                     <li class="a2">
@@ -294,20 +294,22 @@
                         <h2>诚挚邀请</h2>
                         <h5>EXCELLENT STAFF </h5>
                     </div>
-                    <div class="container">
+                    <div class="container   ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.7s" swiper-animate-delay="0.7s">
                         <div class="we1">
-                            <input type="text">
+                            <input type="text" placeholder="* 姓名" name="username" />
                         </div>
                         <div class="we2">
-                            <input type="text">
+                            <input type="text" placeholder="* 电话" name="username" />
                         </div>
                         <div class="we3">
-                            <input type="text">
+                            <input type="text" placeholder="* 部门" name="username" />
                         </div>
                         <div class="we4">
-                            <input type="text">
+                            <a href="#">
+                                <input type="text" placeholder="提交">
+                            </a>
                         </div>
-                        <p>2018年1月18日 晚8:00- 11:00</p>
+                        <p class="www">2018年1月18日 晚8:00- 11:00</p>
                         <p>xx市xx路xx号xxx大酒店大堂</p>
                     </div>
                     <div class="footer">
