--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <div class="dian">
-        <a href="kosdi4wt.github.io/微场景/index.html">微场景</a>
+        <a href="https://kosdi4wt.github.io/微场景/index.html">微场景</a>
     </div>
 </body>
 
