--- a/index.html
+++ b/index.html
@@ -3,20 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>这是一个网页</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
-<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <body>
-<div class="row">
+<div class="container">
+    <div class="row">
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="..." alt="">
+      <img src="img/weichangjing.jpg" alt="">
       <div class="caption">
-        <h3>Thumbnail label</h3>
+        <h3>微场景</h3>
         <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        <p><a href="微场景/index.html" class="btn btn-primary" role="button">Button</a></p>
       </div>
     </div>
   </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="img/weichangjing.jpg" alt="">
+      <div class="caption">
+        <h3>Thumbnail label</h3>
+        <p>...</p>
+        <p><a href="微场景/index.html" class="btn btn-primary" role="button">Button</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="img/weichangjing.jpg" alt="">
+      <div class="caption">
+        <h3>Thumbnail label</h3>
+        <p>...</p>
+        <p><a href="微场景/index.html" class="btn btn-primary" role="button">Button</a></p>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
