--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="caption">
         <h3>Thumbnail label</h3>
         <p>...</p>
-        <p><a href="微场景/index.html" class="btn btn-primary" role="button">Button</a></p>
+        <p><a href="第一学期答辩/Club.html" class="btn btn-primary" role="button">Button</a></p>
       </div>
     </div>
   </div>
