--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="caption">
         <h3>Thumbnail label</h3>
         <p>...</p>
-        <p><a href="start-industry/index，html" class="btn btn-primary" role="button">Button</a></p>
+        <p><a href="start-industry/index.html" class="btn btn-primary" role="button">Button</a></p>
       </div>
     </div>
   </div>
