--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="img/weichangjing.jpg" alt="">
+      <img src="img/diyixueqi.jpg" alt="">
       <div class="caption">
         <h3>Thumbnail label</h3>
         <p>...</p>
@@ -31,7 +31,7 @@
   </div>
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="img/weichangjing.jpg" alt="">
+      <img src="img/start-industry.png" alt="">
       <div class="caption">
         <h3>Thumbnail label</h3>
         <p>...</p>
